package io.deephaven.javascript.proto.dhinternal.io.deephaven.proto.table_pb_service;

import jsinterop.annotations.JsOverlay;
import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsProperty;
import jsinterop.annotations.JsType;
import jsinterop.base.Js;
import jsinterop.base.JsPropertyMap;

@JsType(
    isNative = true,
    name = "dhinternal.io.deephaven.proto.table_pb_service.TableService",
    namespace = JsPackage.GLOBAL)
public class TableService {
  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface AsOfJoinTablesType {
    @JsOverlay
    static TableService.AsOfJoinTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface BatchType {
    @JsOverlay
    static TableService.BatchType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ComboAggregateType {
    @JsOverlay
    static TableService.ComboAggregateType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface CrossJoinTablesType {
    @JsOverlay
    static TableService.CrossJoinTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface DropColumnsType {
    @JsOverlay
    static TableService.DropColumnsType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface EmptyTableType {
    @JsOverlay
    static TableService.EmptyTableType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ExactJoinTablesType {
    @JsOverlay
    static TableService.ExactJoinTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ExportedTableUpdatesType {
    @JsOverlay
    static TableService.ExportedTableUpdatesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface FilterType {
    @JsOverlay
    static TableService.FilterType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface FlattenType {
    @JsOverlay
    static TableService.FlattenType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface HeadByType {
    @JsOverlay
    static TableService.HeadByType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface HeadType {
    @JsOverlay
    static TableService.HeadType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface LazyUpdateType {
    @JsOverlay
    static TableService.LazyUpdateType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface LeftJoinTablesType {
    @JsOverlay
    static TableService.LeftJoinTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface MergeTablesType {
    @JsOverlay
    static TableService.MergeTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface NaturalJoinTablesType {
    @JsOverlay
    static TableService.NaturalJoinTablesType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface RunChartDownsampleType {
    @JsOverlay
    static TableService.RunChartDownsampleType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface SelectDistinctType {
    @JsOverlay
    static TableService.SelectDistinctType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface SelectType {
    @JsOverlay
    static TableService.SelectType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface SnapshotType {
    @JsOverlay
    static TableService.SnapshotType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface SortType {
    @JsOverlay
    static TableService.SortType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface TailByType {
    @JsOverlay
    static TableService.TailByType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface TailType {
    @JsOverlay
    static TableService.TailType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface TimeTableType {
    @JsOverlay
    static TableService.TimeTableType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface UngroupType {
    @JsOverlay
    static TableService.UngroupType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface UnstructuredFilterType {
    @JsOverlay
    static TableService.UnstructuredFilterType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface UpdateType {
    @JsOverlay
    static TableService.UpdateType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface UpdateViewType {
    @JsOverlay
    static TableService.UpdateViewType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  @JsType(isNative = true, name = "?", namespace = JsPackage.GLOBAL)
  public interface ViewType {
    @JsOverlay
    static TableService.ViewType create() {
      return Js.uncheckedCast(JsPropertyMap.of());
    }

    @JsProperty
    String getMethodName();

    @JsProperty
    Object getRequestType();

    @JsProperty
    Object getResponseType();

    @JsProperty
    Object getService();

    @JsProperty
    boolean isRequestStream();

    @JsProperty
    boolean isResponseStream();

    @JsProperty
    void setMethodName(String methodName);

    @JsProperty
    void setRequestStream(boolean requestStream);

    @JsProperty
    void setRequestType(Object requestType);

    @JsProperty
    void setResponseStream(boolean responseStream);

    @JsProperty
    void setResponseType(Object responseType);

    @JsProperty
    void setService(Object service);
  }

  public static TableService.AsOfJoinTablesType AsOfJoinTables;
  public static TableService.BatchType Batch;
  public static TableService.ComboAggregateType ComboAggregate;
  public static TableService.CrossJoinTablesType CrossJoinTables;
  public static TableService.DropColumnsType DropColumns;
  public static TableService.EmptyTableType EmptyTable;
  public static TableService.ExactJoinTablesType ExactJoinTables;
  public static TableService.ExportedTableUpdatesType ExportedTableUpdates;
  public static TableService.FilterType Filter;
  public static TableService.FlattenType Flatten;
  public static TableService.HeadType Head;
  public static TableService.HeadByType HeadBy;
  public static TableService.LazyUpdateType LazyUpdate;
  public static TableService.LeftJoinTablesType LeftJoinTables;
  public static TableService.MergeTablesType MergeTables;
  public static TableService.NaturalJoinTablesType NaturalJoinTables;
  public static TableService.RunChartDownsampleType RunChartDownsample;
  public static TableService.SelectType Select;
  public static TableService.SelectDistinctType SelectDistinct;
  public static TableService.SnapshotType Snapshot;
  public static TableService.SortType Sort;
  public static TableService.TailType Tail;
  public static TableService.TailByType TailBy;
  public static TableService.TimeTableType TimeTable;
  public static TableService.UngroupType Ungroup;
  public static TableService.UnstructuredFilterType UnstructuredFilter;
  public static TableService.UpdateType Update;
  public static TableService.UpdateViewType UpdateView;
  public static TableService.ViewType View;
  public static String serviceName;
}
